--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
         <img src="./img/logo.svg" alt="">
     </header>
+    
     <main>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</Berners-Lee></h1>
         <h2>Scritto da </h2>
@@ -26,9 +27,38 @@
             </ul>
         </section>
         <section>
-            <table></table>
+            <table>
+                <thead>
+                    <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                    </tr>
+                    <tr>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                    </tr>
+                    <tr>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
+
+    <footer>
+        <span>Copyright The Booleaner - Tutti i diritti riservati</span>
+    </footer>
     
 </body>
 </html>
