--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheBooleaner</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <img src="./img/logo.svg" alt="">
+        <div class="logo-back">
+            <img class="logo" src="./img/logo.svg" alt="">
+        </div>
     </header>
-    
+
     <main>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</Berners-Lee></h1>
-        <h2>Scritto da </h2>
-        <h2>The Booleaner</h2>
+        <em>Scritto da </em>
+        <em>The Booleaner</em><br>
+        <em>il 10/10/2020</em><br>
         <img src="./img/tim-1.jpg" alt="tim berners lee foundation">
         <img src="./img/tim-2.jpg" alt="tim berners-lee profile pic">
         <em>1st photo: John S. and James L. Knight Foundation</em><br>
