--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
 
     <main>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</Berners-Lee></h1>
-        <em>Scritto da </em>
-        <em>The Booleaner</em><br>
+        <div class="author">
+            <em>Scritto da </em>
+            <em class="booleaner">The Booleaner</em>
+        </div>
         <em>il 10/10/2020</em><br>
-        <img src="./img/tim-1.jpg" alt="tim berners lee foundation">
-        <img src="./img/tim-2.jpg" alt="tim berners-lee profile pic">
-        <em>1st photo: John S. and James L. Knight Foundation</em><br>
-        <em>2nd photo: Wikimedia by Paul Clarke</em>
+        <section class="photo">
+        
+            <img src="./img/tim-1.jpg" alt="tim berners lee foundation">
+        
+            <img src="./img/tim-2.jpg" alt="tim berners-lee profile pic">
+            <div class="photo-source">
+                <em>1st photo: John S. and James L. Knight Foundation</em><br>
+                <em>2nd photo: Wikimedia by Paul Clarke</em>
+            </div>
+    </section class="main-text">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eius vero voluptas vel labore? Est autem placeat, voluptatibus, sed sequi dicta nobis quidem esse quibusdam, eos aliquid ducimus provident repudiandae?</p>
         <section>
             <ul>
@@ -31,8 +39,8 @@
             </ul>
         </section>
         <section>
-            <table>
-                <thead>
+            <table class="main-table">
+                <thead class="tab-head">
                     <tr>
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
