add table color

--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
         <section>
             <table class="main-table">
                 <thead class="tab-head">
-                    <tr>
+                    <tr >
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="col-item lightblue">
                         <td>lorem ipsum dolor</td>
                         <td>lorem ipsum dolor</td>
                         <td>lorem ipsum dolor</td>
                     </tr>
-                    <tr>
+                    <tr class="col-item">
                         <td>lorem ipsum dolor</td>
                         <td>lorem ipsum dolor</td>
                         <td>lorem ipsum dolor</td>
                     </tr>
-                    <tr>
+                    <tr class="col-item lightblue">
                         <td>lorem ipsum dolor</td>
                         <td>lorem ipsum dolor</td>
                         <td>lorem ipsum dolor</td>
