--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </main>
 
     <footer>
-        <span>Copyright The Booleaner - Tutti i diritti riservati</span>
+        <span class="Copyright">Copyright The Booleaner - Tutti i diritti riservati</span>
     </footer>
     
 </body>
