--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
     </section class="main-text">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eius vero voluptas vel labore? Est autem placeat, voluptatibus, sed sequi dicta nobis quidem esse quibusdam, eos aliquid ducimus provident repudiandae?</p>
-        <section>
+        <section class="list">
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam commodi at ipsa voluptatibus, omnis asperiores, deleniti earum vel labore consequuntur sed voluptate quos. Sed omnis alias, cupiditate quas ex ut!</li>
                 <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, dolorem dolorum animi nobis sed similique suscipit autem facilis optio ullam quis. Eveniet cum amet quaerat nisi provident quibusdam expedita veritatis.</li>
